Adjusting background images, fixing overflow

--- a/index.css
+++ b/index.css
@@ -180,25 +180,27 @@
     .section__card {
       min-width: 57.8125rem;
       display: grid;
-      grid-template-columns: 400px 450px;
+      /* grid-template-columns: 400px 450px; */
+      grid-template-columns: 410px 450px;
       overflow: hidden;
       padding: 0;
-      position: relative;
+    }
+
+    .container {
+      background-image: url('./images/bg-pattern-desktop.svg');
+      background-repeat: no-repeat;
+      background-position: -37rem -18rem;
+      grid-column: 1/1;
+      grid-row: 1/2;
     }
 
     img {
-      grid-column: 1/1;
-      grid-row: 2/2;
-      background-image: url('./images/bg-pattern-desktop.svg');
-      background-repeat: no-repeat;
-      background-position: 10rem -10rem;
-      left: -4rem;
-      top: -1rem;
-      max-width: 100%;
+      left: -5rem;
+      top: 3rem;
       z-index: 0;
     }
 
-    .section__card::before {
+    .container::before {
       content: url('./images/illustration-box-desktop.svg');
       position: absolute;
       top: 12.3rem;
